--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    
     <link rel="stylesheet" href="./css/index.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid&display=swap" rel="stylesheet">
 
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Electrolize">
@@ -19,6 +20,7 @@
 
     <div id="main_screen"  w3-include-html="./pages/main_screen.html"></div>
     <div id="game_screen" class="hide" w3-include-html="./pages/game.html"></div>
+    <div id="result_screen" class="hide" w3-include-html="./pages/result.html"></div>
 
 </body>
 
