--- a/pages/game.html
+++ b/pages/game.html
@@ -1,1 +1,10 @@
+<link rel="stylesheet" href="./css/game.css">
 
+<div class="score">
+    Score: 
+    <span class="currentScore"></span>
+    /
+    <span class="total"></span>
+</div>
+
+<div id="puzzle"></div>
